# mcp-process

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
src/mcp_process/: __init__.py  server_process.py
tests/: conftest.py  test_process.py  test_process_tree.py
